--- a/SCSS/layout/_header.scss
+++ b/SCSS/layout/_header.scss
@@ -3,6 +3,19 @@
     top: 0;
     z-index: 12;
     background-color: $bg-white;
+    transition: top 0.4s ease;
+}
+.header-hidden {
+    position: absolute;
+    top: -212px;
+    transition: top 0.4s ease;
+    z-index: 12;
+}
+.header-default {
+    position: relative;
+    top: 0;
+    z-index: 12;
+    width: 100vw;
 }
 //netmatters logo
 .logo {
@@ -47,9 +60,7 @@ button {
         width: 35px;
         height: 4px;
         background-color: $bg-white;
-        transform: translate(50%, -50%);
-        transition: 0.4s;
-        
+        transform: translate(50%, -50%);        
             &::before,
             &::after {
                 content: "";
@@ -70,29 +81,40 @@ button {
     }
 }
 .burger-burger-clicked .mid {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 34px;
-    height: 4px;
-    background-color: $bg-white;
-    transform: translate(-50%, -50%) rotate(45deg);
+  transform: translate(50%, -50%) rotate(45deg);
+  transition: transform 0.4s ease;
+  &::before {
+    top: 0;
+    transform: rotate(90deg);
     transition: transform 0.4s ease;
-        &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            width: 34px;
-            height: 4px;
-            left: 50%;
-            transform: translate(-50%, -50%) rotate(90deg);
-            transition: transform 0.4s ease;
-            background-color: $bg-white;;
-        }
-        &::after {
-            display: none;
-        }
+  }
+  &::after {
+    display: none;
+  }
 }
+    // position: absolute;
+    // bottom: 0;
+    // left: 50%;
+    // width: 34px;
+    // height: 4px;
+    // background-color: $bg-white;
+    // transform: translate(-50%, -50%) rotate(45deg);
+    // transition: transform 0.4s ease;
+    //     &::before {
+    //         content: "";
+    //         position: absolute;
+    //         top: 0;
+    //         width: 34px;
+    //         height: 4px;
+    //         left: 50%;
+    //         transform: translate(-50%, -50%) rotate(90deg);
+    //         transition: transform 0.4s ease;
+    //         background-color: $bg-white;;
+    //     }
+    //     &::after {
+    //         display: none;
+    //     }
+
 // I accidentally mixed up the plane-icon and mouse-icon names
 #search-bar--sm-3,
 #mouse-icon,
@@ -228,6 +250,7 @@ button {
 .header-order {
     background-color: $bg-white;
     display: flex;
+    // width: 100%;
     padding: rem(20) rem(15);
     z-index: 12;
     > .container-logo,
@@ -311,3 +334,19 @@ button {
     }
 }
 
+#header-scroll {
+    background-color: $bg-white;
+}
+#spacer {
+    width: 100vw;
+    height: 212px;
+    margin: 0;
+    padding: 0;
+    background-color: $bg-white;
+}
+.spacer-hidden {
+    display: none;
+}
+.spacer-display {
+    display: block;
+}
