--- a/SCSS/layout/_layout.scss
+++ b/SCSS/layout/_layout.scss
@@ -50,6 +50,8 @@ body {
     transition: left 0.4s ease;
     position: relative;
     left: -275px;
+    height: 100%;
+    overflow: hidden;
     @include lg {
         left: -350px;
     }
